--- a/src/matches.ejs
+++ b/src/matches.ejs
@@ -11,6 +11,7 @@
     <meta name="apple-mobile-web-app-title" content="Scouting">
     <link rel="manifest" href="/app.webmanifest"/>
     <meta name="mobile-web-app-capable" content="yes">
+    <script src="form.js"></script>
     <style>
         a,a:visited {
             text-align: center;
@@ -25,7 +26,7 @@
         }
     </style>
 </head>
-<body>
+<body id="body" onload="themeHandle()">
     <div class="container" id="search" style="display: <%= displaySelect %>;"> <!--flex is shown-->
         <form>
             <h1 style="font-family: 'raleway-300'">2023 Matches<br><span class="gametitle">CHARGED UP℠</span></h1><br><br>
