--- a/src/delete.ejs
+++ b/src/delete.ejs
@@ -9,9 +9,9 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="apple-mobile-web-app-title" content="Scouting">
     <link rel="manifest" href="/app.webmanifest"/>
-    <link rel="stylesheet" href="2023_float.css" type="text/css">
+    <link rel="stylesheet" href="2023_float.min.css" type="text/css">
     <meta name="mobile-web-app-capable" content="yes">
-    <script src="form.js"></script>
+    <script src="form.min.js"></script>
     <style>
         a,a:visited {
             text-align: center;
