fix index.ejs being exempt

--- a/src/index.ejs
+++ b/src/index.ejs
@@ -53,11 +53,7 @@
             font-size: 6vh;
         }
         a:hover,a:active {
-            color: #fff;
-        }
-        body {
-            text-align: center;
-            background-color: #121212;
+            color: var(--textColor);
         }
         #rolesDisplay span{
             display:none;
@@ -87,6 +83,7 @@
             <br><br><br>
         </form>
     </div>
+    <br><small><a href="settings.html" style="all: unset;">Settings</a></small>
     <br><small><a href="offline.html" style="all: unset;">Access Offline Version</a></small>
     <script>
         document.getElementById("profileName").addEventListener("click", showHideAllChildren);
