re-add alignment

--- a/src/index.ejs
+++ b/src/index.ejs
@@ -47,6 +47,9 @@
     <link rel="apple-touch-startup-image" media="screen and (device-width: 428px) and (device-height: 926px) and (-webkit-device-pixel-ratio: 3) and (orientation: portrait)" href="public/iPhone_14_Plus__iPhone_13_Pro_Max__iPhone_12_Pro_Max_portrait.png">
     <link rel="apple-touch-startup-image" media="screen and (device-width: 834px) and (device-height: 1194px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)" href="public/11__iPad_Pro__10.5__iPad_Pro_portrait.png">
     <style>
+        body {
+            text-align: center;
+        }
         a,a:visited {
             text-align: center;
             text-decoration: none;
