--- a/src/index.ejs
+++ b/src/index.ejs
@@ -86,7 +86,7 @@
             <br><br><br>
         </form>
     </div>
-    <br><small><a href="settings.html" style="all: unset;">Settings</a></small>
+    <br><small><a href="settings" style="all: unset;">Settings</a></small>
     <br><small><a href="offline.html" style="all: unset;">Access Offline Version</a></small>
     <script>
         document.getElementById("profileName").addEventListener("click", showHideAllChildren);
