--- a/src/delete.ejs
+++ b/src/delete.ejs
@@ -33,7 +33,7 @@
     </style>
 </head>
 
-<body id="body" onload="themeHandle()">
+<body id="body" class="dark-mode" onload="themeHandle()">
     <div class="container" id="search" style="display: <%= displaySearch %>;"> <!--flex is shown-->
         <form>
             <h1 style="font-family: 'raleway-300'">2023 Scouting Data<br><span class="gametitle">CHARGED UP℠</span></h1>
