--- a/src/index.ejs
+++ b/src/index.ejs
@@ -75,7 +75,8 @@
     <script src="appinstall.js"></script>
 </head>
 
-<body id="body" class="dark-mode" onload="themeHandle()">
+<body id="body" class="dark-mode">
+    <script>themeHandle()</script>
     <div class="container">
         <form>
             <h1 style="font-family: 'raleway-300'">2023 Scouting<br><span class="gametitle">CHARGED UP℠</span></h1>
