--- a/src/matches.ejs
+++ b/src/matches.ejs
@@ -29,7 +29,8 @@
         }
     </style>
 </head>
-<body id="body" class="dark-mode" onload="themeHandle()">
+<body id="body" class="dark-mode">
+    <script>themeHandle()</script>
     <div class="container" id="search" style="display: <%= displaySelect %>;"> <!--flex is shown-->
         <form>
             <h1 style="font-family: 'raleway-300'">2023 Matches<br><span class="gametitle">CHARGED UP℠</span></h1><br><br>
