--- a/src/delete.ejs
+++ b/src/delete.ejs
@@ -69,11 +69,12 @@
         var currenturl = window.location.href;
         var URL = new URL(currenturl);
         function removeURLParams() {
-            let url = new URL(location.href);
-            url.searchParams.delete('team');
-            url.searchParams.delete('page');
-            url.searchParams.delete('event');
-            window.location.href = url;
+            let url = new URL(location.href)
+            let urlparams = new URLSearchParams(url.search);
+            urlparams.delete('team');
+            urlparams.delete('page');
+            urlparams.delete('event');
+            location.reload();
         }
         function goToHome() {
             window.location.href = "/";
