--- a/src/browse.ejs
+++ b/src/browse.ejs
@@ -89,17 +89,16 @@
                 url.searchParams.append('page', targetPage);
                 window.location.href = url;
             } else if (dir == "bck") {
-            let params = new URLSearchParams(document.location.search);
-            if (params.get('page') >= 1) {
-                let url = new URL(location.href);
-                var targetPage = Number(params.get('page')) - 1
-                url.searchParams.delete('page');
-                url.searchParams.append('page', targetPage);
-                window.location.href = url;
-            } else {
-                let url = new URL(location.href);
-                window.location.href = url;
-            }
+                let params = new URLSearchParams(document.location.search);
+                if (params.get('page') >= 1) {
+                    let url = new URL(location.href);
+                    var targetPage = Number(params.get('page')) - 1
+                    url.searchParams.delete('page');
+                    url.searchParams.append('page', targetPage);
+                    window.location.href = url;
+                } else {
+                    location.reload()
+                }
             }
         }
         function goToHome() {
