--- a/src/manage.ejs
+++ b/src/manage.ejs
@@ -37,6 +37,7 @@
     <script>themeHandle()</script>
     <div class="container" id="search" style="display: <%= displaySearch %>;"> <!--flex is shown-->
         <form>
+            <h4 style="color: red; display: <%= errorDisplay %>"><%= errorMessage %></h4>
             <h1 style="font-family: 'raleway-300'">2023 Scouting Data<br><span class="gametitle">CHARGED UP℠</span></h1>
             <h4>Manage Data</h4><br>
             <fieldset>
