make it look decent

--- a/src/manage.ejs
+++ b/src/manage.ejs
@@ -41,11 +41,11 @@
             <h1 style="font-family: 'raleway-300'">2023 Scouting Data<br><span class="gametitle">CHARGED UP℠</span></h1>
             <h4>Manage Data</h4><br>
             <fieldset>
-                <label>Database: <br></label>
+                <label>Database: <br></label><br>
                 <select name="dbase">
                     <option value="main">main</option>
                     <option value="pit">pit</option>
-                </select>
+                </select><br>
             <button type="submit" style="color: #000; background-color: #68C3E2; border-radius: 0.5rem;; border-style: solid; border-color: #68C3E2; border-width: 0.875rem;; margin-top: 1rem;">View Data</button><br>
             <button type="button" style="color: #000; background-color: #FFB600; border-radius: 0.5rem;; border-style: solid; border-color: #FFB600; border-width: 0.875rem;; margin-top: 1rem;" onclick="goToHome()">Back</button>
             </fieldset>
