--- a/src/confirm.ejs
+++ b/src/confirm.ejs
@@ -31,6 +31,7 @@
                 <input type="text" name="db" value="<%= db %>" readonly>
                 <input type="text" name="submissionID" value="<%= submissionID %>" readonly>
             </fieldset>
+            <button type="submit" style="color: #000; background-color: #68C3E2; border-radius: 0.5rem;; border-style: solid; border-color: #68C3E2; border-width: 0.875rem;; margin-top: 1rem;">Confirm</button><br>
         </form>
     </body>
 </html>
