optimize page loads

--- a/src/confirm.ejs
+++ b/src/confirm.ejs
@@ -11,7 +11,7 @@
     <meta name="apple-mobile-web-app-title" content="Scouting">
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="theme-color" content="#121212" id="themeMeta">
-    <link rel="stylesheet" href="2023_float.min.css" type="text/css">
+    <link rel="stylesheet" href="float.min.css" type="text/css">
     <link rel="manifest" href="/app.webmanifest"/>
     <link rel="apple-touch-startup-image" href="public/launch.png">
     <script src="form.min.js"></script>
@@ -31,7 +31,8 @@
                 <input type="text" name="db" value="<%= db %>" readonly>
                 <input type="text" name="submissionID" value="<%= submissionID %>" readonly>
             </fieldset>
-            <button type="submit" style="color: #000; background-color: #68C3E2; border-radius: 0.5rem;; border-style: solid; border-color: #68C3E2; border-width: 0.875rem;; margin-top: 1rem;">Confirm</button><br>
+            <button type="submit" style="color: #000; background-color: #68C3E2; border-radius: 0.5rem;; border-style: solid; border-color: #68C3E2; border-width: 0.875rem;; margin-top: 1rem;">Confirm</button><br><br>   
+            <button type="button" style="color: #fff; background-color: #E90202; border-radius: 0.5rem;; border-style: solid; border-color: #E90202; border-width: 0.875rem;; margin-top: 1rem;" onclick="goToHome()">Back</button><br><br>
         </form>
     </body>
 </html>
