--- a/src/index.ejs
+++ b/src/index.ejs
@@ -12,7 +12,7 @@
     <meta name="apple-mobile-web-app-title" content="Scouting">
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="theme-color" content="#121212" id="themeMeta">
-    <link rel="stylesheet" href="2023_float.min.css" type="text/css">
+    <link rel="stylesheet" href="float.min.css" type="text/css">
     <link rel="manifest" href="/app.webmanifest"/>
     <link rel="apple-touch-startup-image" href="public/launch.png">
     <link rel="apple-touch-startup-image" media="screen and (device-width: 810px) and (device-height: 1080px) and (-webkit-device-pixel-ratio: 2) and (orientation: landscape)" href="public/10.2__iPad_landscape.png">
