submission ul/dl not actually stable

--- a/src/index.ejs
+++ b/src/index.ejs
@@ -120,7 +120,7 @@
         </form>
     </div>
     <br><small><a href="settings" style="all: unset;">Settings</a></small>
-    <br><small><a href="offline.html" style="all: unset;">Access Offline Version</a></small>
+    <!--<br><small><a href="offline.html" style="all: unset;">Access Offline Version</a></small>-->
     <script>
         window.addEventListener("load", () => {
             checkNetwork(navigator.onLine);
