--- a/src/detail.ejs
+++ b/src/detail.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Browse Data - 766 Scouting</title>
+    <title>Detailed Data - 766 Scouting</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, viewport-fit=cover">
     <meta charset="UTF-8">
     <meta name="apple-mobile-web-app-capable" content="yes">
@@ -29,27 +29,6 @@
         }
         body {
             text-align: center;
-        }
-        table {
-            border-collapse:separate;
-            border: solid var(--gameFlairColor) 1px;
-            border-radius: 6px;
-        }
-
-        td, th {
-            border-left: solid var(--gameFlairColor) 1px;
-            border-top: solid var(--inputColorSelected) 1px;
-        }
-
-        th {
-            background-color: var(--transparent);
-            color: var(--textColor);
-            border-top: none;
-            border-bottom: solid var(--gameFlairColor) 1px;
-        }
-
-        td:first-child, th:first-child {
-            border-left: none;
         }
     </style>
 </head>
@@ -85,22 +64,12 @@
             <h4>Match Data</h4><br>
             <fieldset>
             <fieldset>
-                <h3>Team <%= resultsTeamNumber %> at <%= resultsEventCode %></h3>
-                <table>
-                    <tr>
-                      <th>Match Number</th>
-                      <th>Auto Taxi</th> 
-                      <th>Auto Score</th>
-                      <th>Auto Charge</th>
-                      <th>Teleop Score</th>
-                      <th>Teleop Charge</th>
-                      <th>Cycle Time</th>
-                      <th>Performance Score</th>
-                    </tr>
-                    <%- resultsBody %>
-                  </table>
+                <h3>Team Number: <%= resultsTeamNumber %></h3>
+                <h5>Match Number:  <%= resultsMatchNumber %> |  Event: <%= resultsEventCode %></h5>
+                <h5 style="text-align: left"><%- resultsBody %></h5>
             </fieldset>
             <!--buttons-->
+            <button type="button" style="color: #000; background-color: #68C3E2; border-radius: 0.5rem;; border-style: solid; border-color: #68C3E2; border-width: 0.875rem;; margin-top: 1rem;" onclick='pageControl("bck")'>Previous</button>&emsp;<button style="color: #000; background-color: #68C3E2; border-radius: 0.5rem;; border-style: solid; border-color: #68C3E2; border-width: 0.875rem;; margin-top: 1rem;" onclick='pageControl("fwd")'>Next</button><br>
             <button type="button" style="color: #000; background-color: #FFB600; border-radius: 0.5rem;; border-style: solid; border-color: #FFB600; border-width: 0.875rem;; margin-top: 1rem;" onclick="removeURLParams()">New Search</button>&emsp;<button type="button" style="color: #000; background-color: #FFB600; border-radius: 0.5rem;; border-style: solid; border-color: #FFB600; border-width: 0.875rem;; margin-top: 1rem;" onclick="goToHome()">Back</button>
             </fieldset>
         <br><br>
@@ -109,7 +78,28 @@
     </div>
     <script>
         function removeURLParams() {
-            window.location.href = "/browse"
+            window.location.href = "/detail"
+        }
+        function pageControl(dir) {
+            if (dir == "fwd") {
+                let params = new URLSearchParams(document.location.search);
+                let url = new URL(location.href);
+                const targetPage = Number(params.get('page')) +1
+                url.searchParams.delete('page');
+                url.searchParams.append('page', targetPage);
+                window.location.href = url;
+            } else if (dir == "bck") {
+                let params = new URLSearchParams(document.location.search);
+                if (params.get('page') >= 1) {
+                    let url = new URL(location.href);
+                    var targetPage = Number(params.get('page')) - 1
+                    url.searchParams.delete('page');
+                    url.searchParams.append('page', targetPage);
+                    window.location.href = url;
+                } else {
+                    location.reload()
+                }
+            }
         }
         function goToHome() {
             window.location.href = "/";
