--- a/src/pitimg.ejs
+++ b/src/pitimg.ejs
@@ -69,6 +69,7 @@
             <fieldset>
                 <h3>Team Number: <%= resultsTeamNumber %></h3>
                 <h5>Event: <%= resultsEventCode %></h5>
+                <h5>Images: Front, Back, Side, Bottom, Other</h5>
                 <h5 style="text-align: left"><%- resultsBody %></h5>
             </fieldset>
             <!--buttons-->
