weighted scores, season #
– Add weighted scores to discord bot
– Rename weighted score to match performance score
– Enforce season

--- a/src/browse.ejs
+++ b/src/browse.ejs
@@ -64,7 +64,6 @@
             <fieldset>
                 <label>Target Team Number: <br></label>
                 <input type="tel" name="team" required><br>
-                <input type="hidden" name="page" value="0">
             <br><fieldset>
                 <label>Event Code: </label><br>
                 <select name="event">
@@ -96,7 +95,7 @@
                       <th>Teleop Score</th>
                       <th>Teleop Charge</th>
                       <th>Cycle Time</th>
-                      <th>Performance Score</th>
+                      <th>Match Performance Score</th>
                     </tr>
                     <%- resultsBody %>
                   </table>
