--- a/src/detail.ejs
+++ b/src/detail.ejs
@@ -43,6 +43,7 @@
             <fieldset>
                 <label>Target Team Number: <br></label>
                 <input type="tel" name="team" required><br>
+                <input type="hidden" name="page" value="0">
             <br><fieldset>
                 <label>Event Code: </label><br>
                 <select name="event">
