--- a/src/teams.ejs
+++ b/src/teams.ejs
@@ -84,7 +84,7 @@
                 <table>
                     <tr>
                       <th>Team Number</th>
-                      <th>Avg Analysis Score</th> 
+                      <th>Match Performance Score (Avg)</th> 
                     </tr>
                     <%- resultsBody %>
                   </table>
