--- a/src/teams.ejs
+++ b/src/teams.ejs
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, viewport-fit=cover">
     <meta charset="UTF-8">
     <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="theme-color" content="#121212" id="themeMeta">
     <link rel="apple-touch-startup-image" href="public/launch.png">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="apple-mobile-web-app-title" content="Scouting">
@@ -84,7 +85,7 @@
                 <table>
                     <tr>
                       <th>Team Number</th>
-                      <th>Match Performance Score (Avg)</th> 
+                      <th colspan="2">Match Performance Score (Avg)</th> 
                     </tr>
                     <%- resultsBody %>
                   </table>
