--- a/src/index.ejs
+++ b/src/index.ejs
@@ -119,6 +119,7 @@
             <br><br><br>
         </form>
     </div>
+    <br><small><a href="scouts" style="all: unset;">Top Scouts</a></small>
     <br><small><a href="settings" style="all: unset;">Settings</a></small>
     <!--<br><small><a href="offline.html" style="all: unset;">Access Offline Version</a></small>-->
     <script>
