--- a/src/index.ejs
+++ b/src/index.ejs
@@ -116,10 +116,11 @@
             <a href="pit" class="gameflair1" style="order: <%- order4 %>; margin-bottom: 5%;">Pit Scouting<br></a>
             <%- additionalURLs %>
             </div>
-            <br><br><br>
+            <br><br>
         </form>
     </div>
     <br><small><a href="scouts" style="all: unset;">Top Scouts</a></small>
+    <br><small><a href="casino" style="all: unset;">766 Casino</a></small>
     <br><small><a href="settings" style="all: unset;">Settings</a></small>
     <!--<br><small><a href="offline.html" style="all: unset;">Access Offline Version</a></small>-->
     <script>
