--- a/src/index.ejs
+++ b/src/index.ejs
@@ -120,7 +120,7 @@
         </form>
     </div>
     <br><small><a href="scouts" style="all: unset;">Top Scouts</a></small>
-    <br><small><a href="casino" style="all: unset;">766 Casino</a></small>
+    <br><small><a href="points" style="all: unset;">Points</a></small>
     <br><small><a href="settings" style="all: unset;">Settings</a></small>
     <!--<br><small><a href="offline.html" style="all: unset;">Access Offline Version</a></small>-->
     <script>
