--- a/src/pitimg.ejs
+++ b/src/pitimg.ejs
@@ -34,6 +34,10 @@
         body {
             text-align: center;
         }
+        img {
+            width: 90vw;
+            height: 90vw;
+        }
     </style>
 </head>
 <body id="body" class="dark-mode">
